[package]
name = "unsafe-storage"
version = "0.1.0"
edition = "2021"
description = "Maintain invariants in macros without modules"
repository = "https://github.com/andrewgazelka/unsafe-storage"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["macro", "invariant", "macros"]

[dependencies]
